# PEANUT-AGENT

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  QUICKSTART.md  README.es.md  README.md  docker-compose.yml  gateway.py  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  reflection.py  run_gateway.ps1  run_web.ps1  setup.py  tsconfig.base.json  web_ui.py  wizard.py
.github/workflows/: ci.yml
agentlow/: __init__.py  agent.py  cli.py  reflection.py  tools.py  web_ui.py
apps/dashboard/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/auth/login/: page.tsx
apps/dashboard/src/app/dashboard/: dashboard-client.tsx  layout.tsx  page.tsx
apps/dashboard/src/app/preview/: page.tsx
apps/dashboard/src/components/layout/: sidebar.tsx
apps/dashboard/src/lib/: api.ts  auth.ts  utils.ts
apps/dashboard/tests/: lib.api.test.ts  lib.utils.test.ts  setup.ts
docs/: KILOCODE_INTEGRATION.md  _config.yml  index.html
services/gateway/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
services/gateway/src/: server.ts
services/gateway/src/application/services/: audit.service.ts  auth.service.ts  crypto.service.ts  docker.service.ts  openclaw.service.ts  rate-limit.service.ts
services/gateway/src/domain/: errors.ts
services/gateway/src/domain/agent/: agent.entity.ts
services/gateway/tests/integration/: agents.integration.test.ts  auth.integration.test.ts
services/gateway/tests/unit/: agent.entity.test.ts  audit.entity.test.ts  audit.service.test.ts  auth.service.test.ts  crypto.service.test.ts  mcp.server.test.ts  openclaw.service.test.ts  rate-limit.service.test.ts  user.entity.test.ts
src/peanut_agent/: __init__.py  agent.py  cli.py  config.py
src/peanut_agent/cache/: __init__.py  store.py
src/peanut_agent/tools/: __init__.py  executor.py  schemas.py
tests/: conftest.py  test_agent.py  test_cache.py  test_config.py  test_executor.py
(+20 files in other folders)
